--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "chess.js": "^1.0.0-beta.8",
+    "dotenv": "^16.4.5",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
   },
